# autosota

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
configs/: default.yaml
configs/policies/: redlines.yaml
configs/prompts/: fix.yaml  ideator.yaml  init.yaml  monitor.yaml  objective.yaml  resource.yaml  scheduler.yaml  supervisor.yaml
examples/: example_usage.py
src/: main.py
src/core/: __init__.py  enums.py  exceptions.py  llm_client.py  models.py  utils.py
src/services/: __init__.py  fix_service.py  idea_service.py  init_service.py  monitor_service.py  objective_service.py  resource_service.py  scheduler_service.py  supervisor_service.py
tests/: test_basic.py
